--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <header>
             <h1>Titulo do Site</h1>
-        </header>
+        </header
         <article>
             <h2>Artigo 001</h2>
             <p>Texto Artigo 001</p>
