--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 <body>
     <main>
         <header>
-<<<<<<< HEAD
+
             <h1>Titulo do Site </h1>
-=======
+
             <h1>Titulo do Site</h1>
-<<<<<<< HEAD
->>>>>>> conteudo
+
         </header>
-=======
-        </header
->>>>>>> conteudo
+
+</header>
+
         <article>
             <h2>Artigo 001</h2>
             <p>Texto Artigo 001</p>
