Comecei a criar o conteudo

--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 <body>
     <main>
         <header>
-
-            <h1>Titulo do Site </h1>
-
-            <h1>Titulo do Site</h1>
-
+            <h1>Cursos Gratis</h1>
         </header>
-
-</header>
-
-        <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+       <article>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat tempora temporibus facilis 
+                delectus eos aliquid id pariatur, neque porro consequuntur, voluptas iure amet illo expedita 
+                eveniet, exercitationem voluptatem tenetur! Vitae?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>        
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eaque eius alias nemo. 
+                Vitae commodi voluptas dolor accusamus corporis. Quaerat fuga, ex doloribus reprehenderit 
+                optio ipsa fugit laborum vero adipisci.</p>        
         </article>                   
     </main>
 </body>
-</html>
+</htma>
